# enterprise-langgraph-multi-agent-platform

./: ADR.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GLOSSARY.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
docs/01-fundamentals/: 01-why-langgraph.md  02-Core-Concepts.md  03-State.md  04-Nodes-and-Edges.md  05-Graph-Lifecycle.md  06-Memory-and-Checkpointing.md  07-Commands-and-Graph-Control.md  08-Multi-Agent-Architecture.md  09-Building-Your-First-LangGraph-Application.md  10-StateGraph-and-GraphBuilder.md
docs/02-production-patterns/: 12-configuration-management.md  13-Logging.md  14-Dependency-Injection.md  15-Error-Handling.md  16-Project-Structure.md  17-Configuration-vs-Secrets.md  18-Design-Patterns.md  19-Clean-Architecture.md
docs/03-langgraph-core/: Commands.md  Conditional-Edges.md  Graph-Compilation.md  Interrupts.md  Parallel-Execution.md  Persistence.md  Streaming.md  Subgraphs.md
docs/04-multi-agent/: 01-Supervisor-Agent.md  02-network-pattern.md  03-swarw-agent.md  Agent-Orchestration.md  Human-in-the-Loop.md  Multi-Agent-Communication.md  Planner-Agent.md  Reflaction-agent.md  Research-Agent.md  agent-memory-pattern.md
docs/06-ai-platform/: 01-AI-Platform-Architecture.md  02-LLM-Gateway.md  03-Model-Routing.md  05-model-fallback.md  06-Rate-Limiting.md  07-Token-Management.md  08-Cost-Optimization.md  09-Prompt-Management.md  10-Model-Registry.md  11-Multi-Tenancy.md
src/graph/: graph.py
src/state/: state.py
